# 8asscrap

./: .gitignore  README.md
.githooks/: pre-commit
app/backend/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose-db.yml
app/backend/compose/: compose-redash.yml  compose.yml
app/backend/runtime/: compose-app.yml  compose-base.yml  compose-redash.yml  compose.yml  setup.sh
app/backend/sidexporter/: main.mjs  package-lock.json  package.json
app/backend/src/: api.rs  datacollector.rs  main.rs  store.rs
app/frontend/: .prettierignore  .prettierrc  Dockerfile  README.md  compose.yml  package-lock.json  package.json  setup.sh  tailwind.config.ts
app/frontend/.svelte-kit/: ambient.d.ts
app/frontend/.svelte-kit/types/: route_meta_data.json
app/frontend/.svelte-kit/types/src/routes/: $types.d.ts
app/frontend/src/: app.css  app.html  domain.ts
app/frontend/src/lib/: AscentRow.svelte  AscentTypeCircle.svelte
app/frontend/src/routes/: +page.svelte
data_collector/: Cargo.toml
data_collector/src/: lib.rs
sidexporter/: main.mjs  package.json
