[package]
name = "data_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.46"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
