[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3"
mongodb = "2.8.2"
serde_json = "1.0.117"
actix-web = "4.8.0"
env_logger = "0.11.3"
rand = "0.8.5"
ureq = { version = "2.10.0", features = ["json"] }
url = "2.5.2"
envconfig = "0.10.0"
clap = { version = "4.5.11", features = ["derive"] }
dotenvy = "0.15.7"
